crates/inertia-axum-macros/tests/ui/fail/generic_page_typegen.stderr
error: error[INERTIA-TYPEGEN-012]: generic Inertia page roots require a concrete frontend contract; use a concrete page type
 --> tests/ui/fail/generic_page_typegen.rs:5:13
  |
5 | struct Items<T: serde::Serialize + Send + 'static> {
  |             ^
